2024-11-18: [BUGFIX] Fix square border for `AnalogueClock`
2024-11-14: [FEATURE] Enable support for vertical bars for `GroupBox2`
2024-11-03: [FEATURE] Add `ImageDecoration` for widgets
2024-10-19: [RELEASE] v0.29.0 release - compatible with qtile 0.29.0
2024-08-23: [FEATURE] Add `GradientDecoration` for widgets
2024-08-13: [RELEASE] v0.28.1 release - compatible with qtile 0.28.1
2024-08-11: [RELEASE] v0.28.0 release - compatible with qtile 0.28.0
2024-07-22: [FEATURE] Add ability to toggle visibility of groups in `GroupBox2` widget
2024-07-18: [BUGFIX] Fix volume widgets bug volume display triggered on opening apps using sound device
2024-07-16: [POST RELEASE] v0.27.0.post1 incorporates bugfix below. Still compatible with v0.27.0
2024-07-16: [BUGFIX] Fix bug where border decorations failed on x11 if user did not have wayland libraries installed
2024-07-12: [RELEASE] v0.27.0 release - compatible with qtile 0.27.0
2024-07-12: [BUGFIX] Fix bug where conditional border could resize window
2024-07-07: [FEATURE] Add `RoundedCorners` border decoration (Wayland only)
2024-07-07: [FEATURE] Add `ConditionalBorderWidth` to set border width depending on window conditions
2024-06-13: [FEATURE] Add new `CustomBorder` to draw window borders with user-defined functions
2024-06-06: [FEATURE] Add new `ConditionalBorder` to set window border depending on window conditions (name, class etc.)
2024-06-01: [BUGFIX] Fix `GlobalMenu` crash after reloading config
2024-05-29: [BUGFIX] Fix bug with border decorations when using both standard and decorated borders
2024-05-22: [RELEASE] v0.26.0 release - compatible with qtile 0.26.0
2024-05-19: [FEATURE] Add modified `Plasma` layout to include border highlighting
2024-05-10: [FEATURE] Add window border decorations (NB experimental)
2024-04-26: [FEATURE] Add hooks to `ALSAWidget` and `PulseVolumeExtra`
2024-04-25: [FEATURE] Add ability to drag `PopupSlider` and `PopupCircularProgress` controls (NB experimental)