@@ -46,11 +46,11 @@ MOCK_MODULES = [
     "cffi",
     "dateutil",
     "dateutil.parser",
-    "dbus_next",
-    "dbus_next.aio",
-    "dbus_next.service",
-    "dbus_next.errors",
-    "dbus_next.constants",
+    "dbus_fast",
+    "dbus_fast.aio",
+    "dbus_fast.service",
+    "dbus_fast.errors",
+    "dbus_fast.constants",
     "iwlib",
     "keyring",
     "mpd",
