@@ -28,9 +28,9 @@ import libqtile.config
 import libqtile.confreader
 import libqtile.layout
 import pytest
-from dbus_next import Message, Variant
-from dbus_next.aio import MessageBus
-from dbus_next.constants import MessageType
+from dbus_fast import Message, Variant
+from dbus_fast.aio import MessageBus
+from dbus_fast.constants import MessageType
 from libqtile.log_utils import init_log
 
 import qtile_extras.widget.brightnesscontrol
